# erlang-ffi

./: .gitignore  CHANGELOG  README.md  erlang.cabal  stack.yaml
Foreign/Erlang/: Network.lhs  OTP.lhs  Processes.lhs  Types.lhs
Foreign/Erlang/OTP/: Mnesia.lhs
src/Foreign/: Erlang.hs  Erlang.lhs
src/Foreign/Erlang/: Network.hs  Network.lhs  OTP.hs  Processes.hs  Processes.lhs  Types.hs  Types.lhs  Utilities.hs  Utilities.lhs
src/Foreign/Erlang/OTP/: GenServer.hs  GenServer.lhs  Mnesia.hs  Mnesia.lhs
