name:                erlang
version:             0.2.3
stability:           alpha
description:
  Speaks the Erlang network protocol and impersonates an Erlang node
  on the network.  Fully capable of bi-directional communication with
  Erlang.  Erlang types are, as far as reasonable, mapped to Haskell
  types.  Messages to Erlang are just function calls in Haskell, and
  messages from Erlang are delivered to MVars.
license:             GPL
license-file:        COPYING
author:              Eric Sessoms <nubgames@gmail.com>
maintainer:          Artúr Poór <gombocarti@gmail.com>
homepage:            http://github.com/gombocarti/erlang-ffi
category:            Foreign
synopsis:            FFI interface to Erlang.
cabal-version:       >= 1.6
build-type:          Simple
extra-source-files:
  CHANGELOG
source-repository head
  type:     git
  location: https://github.com/gombocarti/erlang-ffi.git

library
  build-depends:     base >= 4 && < 5,
                     binary >= 0.4.4,
                     bytestring,
                     directory,
                     filepath,
                     MissingH,
                     network >= 2.2.0.1,
                     random >= 1.0.0.1
  exposed-modules:   Foreign.Erlang
  other-modules:     Foreign.Erlang.Network,
                     Foreign.Erlang.OTP,
                     Foreign.Erlang.OTP.GenServer,
                     Foreign.Erlang.OTP.Mnesia,
                     Foreign.Erlang.Processes,
                     Foreign.Erlang.Types,
                     Foreign.Erlang.Utilities
  hs-source-dirs:    src
